[tool.poetry]
name = "nalude"
version = "0.3.0"
description = "A standard module.  Inspired by Haskell's Prelude."
authors = ["Nasy <nasyxx+nalude@gmail.com>"]
keywords = ["base", "prelude", "nasy"]
license = "LGPL-3.0+"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
readme = "README.md"
include = ["CHANGELOG", "poetry.lock", "README.org", "README.html"]
repository = "https://github.com/nasyxx/nalude"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 0
balanced_wrapping = true
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
order_by_type = true

import_heading_typdef = "Type Definition"
known_typdef = ["typing", "typdefs", "types"]

import_heading_stdlib = "Standard Library"

import_heading_aio = "Async Packages"
known_aio = ["asyncio", "uvloop"]

import_heading_tpkg = "This Package"
known_tpkg = ["nalude"]

import_heading_thirdparty = "Other Packages"

import_heading_localfolder = "Local Packages"

sections = ["FUTURE", "TYPDEF", "STDLIB", "AIO", "THIRDPARTY", "FIRSTPARTY", "TPKG", "LOCALFOLDER"]

length_sort = true
